confirm dist artifact for codebuil

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,8 @@ phases:
     commands:
       - echo Building the React app...
       - npm run build
+      - echo Build completed. Listing 'dist' folder content:
+      - ls -R dist
 
 artifacts:
   files:
