--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,1 +1,30 @@
+name: Build and Test React App
+
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build project
+      run: npm run build
+
+    # Optional: Run tests if you have any
+    - name: Run tests
+      run: npm test -- --watchAll=false || echo "No tests found or tests failed"
 
