--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,6 +24,17 @@ jobs:
     - name: Build project
       run: npm run build
 
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build project
+      run: npm run build
+
     # Optional: Run tests if you have any
     - name: Run tests
       run: npm test -- --watchAll=false || echo "No tests found or tests failed"
