--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,29 +1,23 @@
 name: CI Workflow
-
 on:
   push:
     branches:
       - '**'
   pull_request:
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '22'
-
+        cache: 'npm'  # Added caching for faster builds
     - name: Install dependencies
       run: npm ci --legacy-peer-deps
-
     - name: Build React app
       run: npm run build
-
-    - name: Run tests (optional)
-      run: npm test
+    - name: Run tests
+      run: npm test -- --coverage --ci --watchAll=false
