--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,20 +1,23 @@
-name: CI Workflow (Debug Version)
+name: CI Pipeline
 
 on:
   push:
     branches:
       - '**'
   pull_request:
+    branches:
+      - main
+      - develop
 
 env:
   CI: true
 
 jobs:
-  debug-build:
+  build-and-test:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
       
     - name: Setup Node.js
@@ -23,45 +26,33 @@ jobs:
         node-version: '22'
         cache: 'npm'
         
-    - name: Debug - List files
-      run: |
-        echo "=== Repository contents ==="
-        ls -la
-        echo "=== Package.json exists? ==="
-        test -f package.json && echo "✓ package.json found" || echo "✗ package.json missing"
-        
-    - name: Debug - Show package.json scripts
-      run: |
-        echo "=== Available npm scripts ==="
-        npm run 2>/dev/null || echo "No scripts available"
-        
     - name: Install dependencies
+      run: npm ci --legacy-peer-deps
+      
+    - name: Run linter
       run: |
-        echo "=== Installing dependencies ==="
-        npm ci --legacy-peer-deps
-        echo "=== Installation complete ==="
-        
-    - name: Check if lint script exists
-      run: |
-        if npm run | grep -q "lint"; then
-          echo "Lint script found"
+        if npm run --silent 2>/dev/null | grep -q "lint"; then
           npm run lint
         else
-          echo "No lint script found, skipping..."
+          echo "No lint script found - consider adding ESLint for code quality"
         fi
       continue-on-error: true
       
-    - name: Run tests with coverage
+    - name: Run tests
       run: |
-        if npm run | grep -q "test"; then
+        if npm run --silent 2>/dev/null | grep -q "test"; then
           npm test -- --coverage --ci --watchAll=false --passWithNoTests
         else
-          echo "No test script found, skipping tests..."
+          echo "No tests found - consider adding tests for better code quality"
         fi
-      continue-on-error: true
       
-    - name: Build React app
-      run: |
-        echo "=== Starting build ==="
-        npm run build
-        echo "=== Build complete ==="
+    - name: Build application
+      run: npm run build
+      
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: react-build-${{ github.sha }}
+        path: build/
+        retention-days: 30
+      if: success()
